Properly differentiate between infinite timeout and zero timeout. Local variable timo = -1 is used for zero timeout (non blocking mode).

Fixes PR 47625 from anthony.mallet