sys/kern/sys_sig.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: sys_sig.c,v 1.40 2013/03/08 08:48:38 apb Exp $	*/
+/*	$NetBSD: sys_sig.c,v 1.41 2013/03/08 09:32:59 apb Exp $	*/
 
 /*-
  * Copyright (c) 2006, 2007, 2008 The NetBSD Foundation, Inc.
@@ -66,7 +66,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: sys_sig.c,v 1.40 2013/03/08 08:48:38 apb Exp $");
+__KERNEL_RCSID(0, "$NetBSD: sys_sig.c,v 1.41 2013/03/08 09:32:59 apb Exp $");
 
 #include <sys/param.h>
 #include <sys/kernel.h>
@@ -728,8 +728,12 @@ sigtimedwait1(struct lwp *l, const struct sys_____sigtimedwait50_args *uap,
 			return error;
 
 		timo = tstohz(&ts);
-		if (timo == 0 && ts.tv_sec == 0 && ts.tv_nsec != 0)
-			timo++;
+		if (timo == 0) {
+			if (ts.tv_sec == 0 && ts.tv_nsec == 0)
+				timo = -1; /* do not block */
+			else
+				timo = 1; /* the shortest possible timeout */
+		}
 
 		/*
 		 * Remember current uptime, it would be used in
@@ -738,7 +742,7 @@ sigtimedwait1(struct lwp *l, const struct sys_____sigtimedwait50_args *uap,
 		getnanouptime(&tsstart);
 	} else {
 		memset(&tsstart, 0, sizeof(tsstart)); /* XXXgcc */
-		timo = 0;
+		timo = 0; /* infinite timeout */
 	}
 
 	error = (*fetchss)(SCARG(uap, set), &l->l_sigwaitset,
@@ -763,6 +767,12 @@ sigtimedwait1(struct lwp *l, const struct sys_____sigtimedwait50_args *uap,
 		/* If found a pending signal, just copy it out to the user. */
 		mutex_exit(p->p_lock);
 		goto out;
+	}
+
+	if (timo < 0) {
+		/* If not allowed to block, return an error */
+		mutex_exit(p->p_lock);
+		return EAGAIN;
 	}
 
 	/*
